new file:   build/skipmake 	new file:   coll/skipmake 	new file:   confdb/skipmake 	new file:   datatype/skipmake 	new file:   docs/skipmake 	new file:   err/skipmake 	modified:   macros_mymake/custom_make.def 	modified:   macros_mymake/errmsgs.def 	modified:   macros_mymake/mpich.def 	modified:   macros_mymake/subdirs.def 	modified:   mpl/Makefile 	new file:   mpl/skipmake 	modified:   mymake.def 	new file:   pm/skipmake 	new file:   study/skipmake

--- a/mpl/Makefile
+++ b/mpl/Makefile
@@ -1,24 +1,27 @@
 MakePage=mydef_page
 
-TOPROOT=out/t.c out/test_if.pl out/mpl_hash.c out/mpl_sockaddr.c out/test_hash.c out/tcp.c 
+TOPROOT=out/tcp.c out/test_hash.c out/runtests.pl out/mpl_sockaddr.c out/mpl_hash.c out/t.c out/test_if.pl 
 
 all_targets: ${TOPROOT}
+
+out/tcp.c: test_sockaddr.def macros/sockaddr.def macros/sockaddr_listen.def macros/sockaddr_if.def macros/sockaddr_debug.def  
+	${MakePage} -mc test_sockaddr.def out/tcp.c
+
+out/test_hash.c: test_hash.def macros/hash.def /home/hzhou/lib/MyDef/c/hash.def /home/hzhou/lib/MyDef/c/strpool.def  
+	${MakePage} -mc test_hash.def out/test_hash.c
+
+out/runtests.pl: runtests.def   
+	${MakePage} runtests.def out/runtests.pl
+
+out/mpl_sockaddr.c: mpl_sockaddr.def ../mpich_frame.def macros/sockaddr.def macros/sockaddr_listen.def macros/sockaddr_if.def macros/sockaddr_debug.def  
+	${MakePage} -mc mpl_sockaddr.def out/mpl_sockaddr.c
+
+out/mpl_hash.c: mpl_hash.def ../mpich_frame.def macros/hash.def /home/hzhou/lib/MyDef/c/hash.def /home/hzhou/lib/MyDef/c/strpool.def  
+	${MakePage} -mc mpl_hash.def out/mpl_hash.c
 
 out/t.c: test_sockaddr.def macros/sockaddr.def macros/sockaddr_listen.def macros/sockaddr_if.def macros/sockaddr_debug.def  
 	${MakePage} -mc test_sockaddr.def out/t.c
 
 out/test_if.pl: test_sockaddr.def macros/sockaddr.def macros/sockaddr_listen.def macros/sockaddr_if.def macros/sockaddr_debug.def  
 	${MakePage} test_sockaddr.def out/test_if.pl
-
-out/mpl_hash.c: mpl_hash.def ../mpich_frame.def macros/hash.def /Users/hzhou/lib/MyDef/c/hash.def /Users/hzhou/lib/MyDef/c/strpool.def  
-	${MakePage} -mc mpl_hash.def out/mpl_hash.c
-
-out/mpl_sockaddr.c: mpl_sockaddr.def ../mpich_frame.def macros/sockaddr.def macros/sockaddr_listen.def macros/sockaddr_if.def macros/sockaddr_debug.def  
-	${MakePage} -mc mpl_sockaddr.def out/mpl_sockaddr.c
-
-out/test_hash.c: test_hash.def macros/hash.def /Users/hzhou/lib/MyDef/c/hash.def /Users/hzhou/lib/MyDef/c/strpool.def  
-	${MakePage} -mc test_hash.def out/test_hash.c
-
-out/tcp.c: test_sockaddr.def macros/sockaddr.def macros/sockaddr_listen.def macros/sockaddr_if.def macros/sockaddr_debug.def  
-	${MakePage} -mc test_sockaddr.def out/tcp.c
 
