--- a/macros_common/mymake/makefile.def
+++ b/macros_common/mymake/makefile.def
@@ -59,7 +59,7 @@ fncode: dump_makefile($makefile, $moddir)
         $print "LINK = $ccld \x24(AM_LDFLAGS) \x24(LDFLAGS)"
         $if $lt
             $print "LTCC = $(LT:compile) \x24(COMPILE)"
-            $if !$opts{quick}
+            $if !$opts{quick} or $opts{"no-mymake-ld"}
                 $print "LTLD = $(LT:link) \x24(LINK)"
             $else
                 $print "LTLD = perl $opts{mymake}_ld.pl \"lt=$lt\" \x24(LINK)"
@@ -262,6 +262,7 @@ fncode: dump_makefile($makefile, $moddir)
                 $cmd = "\@echo $ld \$\@ && $cmd"
 
             my $a = $p
+            $a=~s/\.exe$//
             $a=~s/[\.\/]/_/g
 
             my ($deps, $objs)
